force-app/main/default/objects/Log_Level_Setting__mdt/Log_Level_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Log Level Setting</label>
    <pluralLabel>Log Level Settings</pluralLabel>
</CustomObject>