force-app/main/default/objects/Log_Level_Setting__mdt/fields/ExportBeforePurge__c.field-meta.xml
<CustomField>
    <fullName>ExportBeforePurge__c</fullName>
    <label>Export Before Purge</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>