force-app/main/default/objects/Log_Level_Setting__mdt/fields/ExportRecipientEmail__c.field-meta.xml
<CustomField>
    <fullName>ExportRecipientEmail__c</fullName>
    <label>Export Recipient Email</label>
    <type>Text</type>
    <length>255</length>
</CustomField>