force-app/main/default/objects/Log_Level_Setting__mdt/fields/MinimumLevel__c.field-meta.xml
<CustomField>
    <fullName>MinimumLevel__c</fullName>
    <label>Minimum Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>FINEST</fullName><default>false</default></value>
            <value><fullName>DEBUG</fullName><default>false</default></value>
            <value><fullName>INFO</fullName><default>true</default></value>
            <value><fullName>WARN</fullName><default>false</default></value>
            <value><fullName>ERROR</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>