force-app/main/default/objects/Log_Level_Setting__mdt/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <label>Retention Days</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>